k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: eleclog-frontend-service
spec:
  selector:
    app: eleclog-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
